# ephys-test-board

./: LICENSE.md  README.md
case/: 91294A134_Black-Oxide Alloy Steel Hex Drive Flat Head Screw.SLDPRT  92000A116_Passivated 18-8 Stainless Steel Pan Head Phillips Screws.SLDPRT  ACCKMR1316NLT14.stp  README.md  base.SLDPRT  eswitch-1R-cap.SLDPRT  top-hole-spec.SLDDRW  top.SLDPRT
firmware/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_GrayOLED_PicoSPI.cpp  Adafruit_GrayOLED_PicoSPI.h  Adafruit_SH1106G.cpp  Adafruit_SH110X.cpp  Adafruit_SH110X.h  CMakeLists.txt  Print.cpp  Print.h  WString.h  ad5683.c  ad5683.h  battmon.c  battmon.h  channels.c  channels.h  eeprom.c  eeprom.h  ephys-tester.h  lut.h  main.c  main.cpp  mode.c  mode.h  oe-splash.h  oled.c  oled.cpp  oled.h  parse.c  parse.h  quadrature.c  quadrature.h  quadrature.pio  sine.h  spi.pio  spikes.h  sr.c  sr.h
firmware/oled-test/: Adafruit_GFX.h  Adafruit_GrayOLED.cpp  Adafruit_GrayOLED.h  Adafruit_SSD1306.cpp  Adafruit_SSD1306.h  ArduinoString.h  CMakeLists.txt  Print.h  String.cpp  main.cpp  translation.cpp  translation.h
pcb/: ephys-test-board.kicad_pro  ephys-test-board.kicad_sch  headstage-io.kicad_sch  ibom.config.ini  mcu.kicad_sch  signal-routing.kicad_sch  test-signal.kicad_sch  usb-and-battery.kicad_sch  usb.kicad_sch  user-io.kicad_sch  ~ephys-test-board.kicad_pcb.lck
spice/: .gitignore  DMG2301L.asy  DMG3418L.asy  DMG3418L.spice  DMP3099L.asy  TLV9062.asy  ad5683-load.asc  ad5683_unipolar-to-bipolar_1khz-thd.asc  ad5683_unipolar-to-bipolar_ac.asc  ad5683_unipolar-to-bipolar_noise.asc  ext-input.asc  (+6 more)
(+59 files in other folders)
